--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
     <h1>Hori<span class="seo">seo</span>n</h1>
     <nav>
         <ul>
-            <li>
-                <a href="#search-engine-optimization">Search Engine Optimization</a>
+            <li><a href="#search-engine-optimization">Search Engine Optimization</a>
             </li>
-            <li>
-                <a href="#online-reputation-management">Online Reputation Management</a>
+            <li><a href="#online-reputation-management">Online Reputation Management</a>
             </li>
-            <li>
-                <a href="#social-media-marketing">Social Media Marketing</a>
+            <li><a href="#social-media-marketing">Social Media Marketing</a>
             </li>
         </ul>
     </nav>
